# semver

./: .travis.yml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: beta.yml  ci.yml  main.yml  nightly.yml
benches/: parse.rs
examples/: semver_check.rs
fuzz/: .gitignore  Cargo.toml  parse_version.rs  parse_version_req.rs  sort_version.rs
src/: backport.rs  diesel_impls.rs  display.rs  err.rs  error.rs  eval.rs  eval_ext.rs  identifier.rs  impls.rs  lib.rs  main.rs  parse.rs  parser.rs  range.rs  serde.rs  version.rs  version_req.rs
src/parser/: version.rs
tests/: deprecation.rs  diesel.rs  old_semver.rs  regression.rs  serde.rs  test_bare_version.rs  test_borsh_identifier.rs  test_identifier.rs  test_matches_prerelease.rs  test_version.rs  test_version_req.rs
tests/node/: mod.rs
tests/util/: mod.rs
