[package]

name = "semver"
version = "0.9.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/steveklabnik/semver"
homepage = "https://docs.rs/crate/semver/"
documentation = "https://docs.rs/crate/semver/"
description = """
Semantic version parsing and comparison.
"""
readme = "README.md"
keywords = ["version", "semantic", "compare"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
semver-parser = "0.10.0"

serde = { version = "1.0", optional = true }
diesel = { version = "1.1", optional = true }

[patch.crates-io]
semver-parser = { git = "https://github.com/hone/semver-parser" }

[features]
default = []

# are we testing on CI?
ci = ["serde", "diesel/sqlite"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
