[package]
name = "semver"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
