[package]
name = "semver"
version = "1.0.12"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["data-structures", "no-std"]
description = "Parser and evaluator for Cargo's flavor of Semantic Versioning"
documentation = "https://docs.rs/semver"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/semver"
rust-version = "1.31"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--cfg", "semver_rustdoc_workaround"]
